--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
