--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,7 @@ name: Update VectorCam Data
 on:
   # Run every 15 minutes for testing
   schedule:
-    - cron: '*/15 * * * *'  # Every 15 minutes
+    - cron: '0 2 * * *'  # Every day at 2:00 AM
   
   # Allow manual trigger
   workflow_dispatch:
